--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [[redirects]]
-  from = "/api"
-  to = "https://junior-connect.com/api"
+  from = "/api/*"
+  to = "https://junior-connect.com/api/:splat"
   status = 200
   force = true
-  headers = {Authorization = "JC_AUTH_KEY"}
+  [redirects.headers]
+    Authorization = "JC_AUTH_PLACEHOLDER"
