--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
   - "admin/index.html"
+  - "admin/config.yml"
 
 # Writing
 new_post_name: :title.md # File name of new posts
