--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ i18n_dir: :lang
 skip_render:
   - "admin/index.html"
   - "admin/config.yml"
+  - "_posts/confederations/**"
+  - "_posts/media/**"
+  - "_posts/partners/**"
 
 # Writing
 new_post_name: :title.md # File name of new posts
