--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -11,15 +11,51 @@ media_folder: "source/assets/uploads"
 public_folder: "/assets/uploads"
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+  - name: "blog"
+    label: "Blog"
+    folder: "_posts/insights"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Author", name: "author", widget: "relation", collection: "authors", searchFields: ["name"], valueField: "name"}
+      - {label: "Publish Date", name: "date", widget: "date"}
+      - {label: "Featured Image", name: "featured_image", widget: "image"}
+      - {label: "Category", name: "category", widget: "select", options: ["People", "Sales", "Projects", "Network", "Enlargement"] }
+      - {label: "Blog Post Content", name: "body", widget: "markdown"}
+  - name: "authors"
+    label: "Authors"
+    folder: "_posts/authors"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "hidden", default: "author"}
+      - {label: "Author Name", name: "name", widget: "string"}
+      - {label: "Author Description", name: "description", widget: "string"}
+      - {label: "Profile Image", name: "image", widget: "image"}
+  - name: "media-publications"
+    label: "Media Publications"
+    folder: "_posts/media"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "hidden", default: "media-publication"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Media Outlet", name: "outlet", widget: "string"}
+      - {label: "Language of Publication", name: "language", widget: "string", default: "English"}
+      - {label: "Link to Publication", name: "link", widget: "string"}
+      - {label: "Cover Image", name: "cover", widget: "image"}
+      - {label: "Publish Date (Used for ordering)", name: "date", widget: "date"}
+  - name: "partners"
+    label: "Partners"
+    folder: "_posts/partners"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "hidden", default: "partner"}
+      - {label: "Partner Name", name: "name", widget: "string"}
+      - {label: "Partner Description", name: "description", widget: "string"}
+      - {label: "Premium Partner?", name: "premium", widget: "boolean", default: "false"}
+      - {label: "Partner Logo", name: "logo", widget: "image"}
+      - {label: "Partner Website", name: "link", widget: "string"}
