--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: "Author", name: "author", widget: "relation", collection: "authors", searchFields: ["name"], valueField: "name"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "featured_image", widget: "image"}
-      - {label: "Category", name: "category", widget: "select", options: ["People", "Sales", "Projects", "Network", "Enlargement"] }
+      - {label: "Category", name: "topic", widget: "select", options: ["People", "Sales", "Projects", "Network", "Enlargement"] }
       - {label: "Blog Post Content", name: "body", widget: "markdown"}
   - name: "authors"
     label: "Authors"
