--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -32,7 +32,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Type", name: "type", widget: "hidden", default: "author"}
-      - {label: "Author Name", name: "name", widget: "string"}
+      - {label: "Author Name", name: "author_name", widget: "string"}
       - {label: "Author Description", name: "description", widget: "string"}
       - {label: "Profile Image", name: "image", widget: "image"}
 
@@ -49,7 +49,7 @@ collections:
       - {label: "Link to Publication", name: "link", widget: "string"}
       - {label: "Cover Image", name: "cover", widget: "image"}
       - {label: "Publish Date (Used for ordering)", name: "date", widget: "date"}
-      
+
   - name: "partners"
     label: "Partners"
     folder: "source/_posts/partners"
@@ -57,7 +57,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Type", name: "type", widget: "hidden", default: "partner"}
-      - {label: "Partner Name", name: "name", widget: "string"}
+      - {label: "Partner Name", name: "partner_name", widget: "string"}
       - {label: "Partner Description", name: "description", widget: "string"}
       - {label: "Premium Partner?", name: "premium", widget: "boolean", default: "false"}
       - {label: "Partner Logo", name: "logo", widget: "image"}
