--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -35,6 +35,7 @@ collections:
       - {label: "Author Name", name: "author_name", widget: "string"}
       - {label: "Author Description", name: "description", widget: "string"}
       - {label: "Profile Image", name: "image", widget: "image"}
+      - {label: "Join Date", name: "date", widget: "date"}
 
   - name: "media-publications"
     label: "Media Publications"
@@ -62,3 +63,4 @@ collections:
       - {label: "Premium Partner?", name: "premium", widget: "boolean", default: "false"}
       - {label: "Partner Logo", name: "logo", widget: "image"}
       - {label: "Partner Website", name: "link", widget: "string"}
+      - {label: "Join Date", name: "date", widget: "date"}
