--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -61,3 +61,40 @@ collections:
       - {label: "Premium Partner?", name: "premium", widget: "boolean", default: "false"}
       - {label: "Partner Logo", name: "logo", widget: "image"}
       - {label: "Partner Website", name: "link", widget: "string"}
+
+  - name: "confederations"
+    label: "GC Confederations"
+    folder: "source/_posts/confederations"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "hidden", default: "confederation"}
+      - {label: "Confederation Name", name: "title", widget: "string"}
+      - {label: "Confederation Logo", name: "logo", widget: "image"}
+      - {label: "Number of JEs", name: "no_of_JEs", widget: "number"}
+      - {label: "Number of JEurs", name: "no_of_JEurs", widget: "number"}
+      - {label: "Number of Projects Last Year", name: "no_of_projects", widget: "number"}
+      - {label: "Turnover in Local Currency Last Year", name: "turnover", widget: "number"}
+      - {label: "Conversion Rate of Local Currency to USD by the end of Last Year", name: "conversion_rate", widget: "number"}
+      - {label: "Don't count twice? (Mark true if this confederation is part of another GC Confederation)", name: "skip", widget: "boolean", default: "false"}
+      - {label: "Website URL", name: "full_url", widget: "string"}
+      - {label: "Website URL (Pretty version, without http or /'s)", name: "short_url", widget: "string"}
+      - {label: "Facebook", name: "facebook", widget: "string"}
+      - {label: "Instagram", name: "instagram", widget: "string"}
+      - {label: "Twitter", name: "twitter", widget: "string"}
+
+  - name: "jade-members"
+    label: "JADE Members"
+    folder: "source/_posts/jade-members"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Type", name: "type", widget: "select", options: ["jade-member", "consultative-member"] }
+      - {label: "Name", name: "title", widget: "string"}
+      - {label: "Logo", name: "logo", widget: "image"}
+      - {label: "Number of JEs (Leave empty if Consultative Member)", name: "no_of_JEs", widget: "number"}
+      - {label: "Website URL", name: "full_url", widget: "string"}
+      - {label: "Website URL (Pretty version, without http or /'s)", name: "short_url", widget: "string"}
+      - {label: "Facebook", name: "facebook", widget: "string"}
+      - {label: "Instagram", name: "instagram", widget: "string"}
+      - {label: "Twitter", name: "twitter", widget: "string"}
