--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -19,7 +19,7 @@ collections:
     fields:
       - {label: "Type", name: "type", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Author", name: "author", widget: "relation", collection: "authors", searchFields: ["name"], valueField: "name"}
+      - {label: "Author", name: "author", widget: "relation", collection: "post-authors", searchFields: ["name"], valueField: "name"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "featured_image", widget: "image"}
       - {label: "Category", name: "topic", widget: "select", options: ["People", "Sales", "Projects", "Network", "Enlargement"] }
