--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Students delivering growth. Worldwide. Since 1967.
 description: Find a Junior Enterprise to hire for your next project or discover how to create a JE in your university in the official website of the Worldwide JE Network
 keywords: junior, enterprise, movement, network, university, entrepreneurship
 author: Junior Enterprise Global Council
-language: en
+language: en_US
 timezone: UTC
 
 # URL
