--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Junior Enterprises Worldwide
+title: Junior Enterprises Global
 subtitle: Students delivering growth. Worldwide. Since 1967.
 description: Find a Junior Enterprise to hire for your next project or discover how to create a JE in your university in the official website of the Worldwide JE Network
 keywords: junior, enterprise, movement, network, university, entrepreneurship
