--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: "Author", name: "author", widget: "relation", collection: "post-authors", searchFields: ["name"], valueField: "name"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "featured_image", widget: "image"}
-      - {label: "Category", name: "topic", widget: "select", options: ["Knowledge", "Network", "Enlargement", "Development", "Impact"] }
+      - {label: "Category", name: "topic", widget: "select", options: ["Knowledge", "Network", "Enlargement", "Opportunities", "Impact"] }
       - {label: "Blog Post Content", name: "body", widget: "markdown"}
 
   - name: "post-authors"
