--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+sitemap:
+    path: sitemap.xml
 ## Themes: https://hexo.io/themes/
 theme: lyon-theme
 
